name:                hunqlite
version:             0.0.0.0
-- synopsis:
-- description:
homepage:            https://github.com/baldmaster/hunqlite#readme
license:             BSD3
license-file:        LICENSE
author:              Sergey Skupoy
maintainer:          sergey.skupoy@gmail.com
copyright:           2017 Sergey Skupoy
category:            Database
extra-source-files:  unqlite/unqlite.c
                   , unqlite/unqlite.h
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Database.UnQLite
                     , Database.UnQLite.Types
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  include-dirs:        unqlite
  includes:            unqlite.h
  c-sources:           unqlite/unqlite.c
  install-includes:    unqlite.h
  cpp-options:         -fPIC

test-suite hunqlite-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , hunqlite
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/baldmaster/hunqlite
